--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,17 @@
 
 # testing
 /coverage
+*.test.js
+*.test.jsx
 
 # production
 /build
 
 # misc
 .DS_Store
+
+# env
+.env
 .env.local
 .env.development.local
 .env.test.local
